--- a/protein.html
+++ b/protein.html
@@ -30,8 +30,6 @@
                 <li>Använd alltid färska ingredienser för bästa smak och textur.</li>
                 <li>Frys bägaren snabbt, ställ den längst bak i frysen där det är kallast.</li>
                 <li>Låt bägaren stå i rumstemperatur i cirka 10 minuter innan du mixar för bästa textur.</li>
-                <li>Förvara glassen i en lufttät burk för att undvika iskristaller.</li>
-                <li>Låt glassen stå i rumstemperatur 5-10 minuter innan servering för enklare skedning.</li>
                 </ul>
             </div>
 
@@ -54,25 +52,20 @@
                 <li><strong>Mix-in:</strong> Blandar in toppings eller bitar utan att smälta glassen.</li>
                 </ul>
             </div>
+            
         </aside>
 
         <section class="receptlista">
             <nav class="lokal-nav">
-                <a href="recept.html" class="active">Alla recept</a>
+                <a href="recept.html">Alla recept</a>
                 <a href="laktosfri.html">Laktosfria recept</a>
-                <a href="protein.html">Proteinrika recept</a>
+                <a href="protein.html" class="active">Proteinrika recept</a>
                 <a href="korta.html">Under 20 minuter</a>
             </nav>
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/vaniljglass.jpg" alt="Vaniljglass">
                     <h4>Klassisk vaniljglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kaffeglass.jpg" alt="Kaffeglass">
-                    <h4>Kaffeglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -101,38 +94,8 @@
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
-                    <img src="image/jordgubbsglass.jpg" alt="Jordgubbsglass">
-                    <h4>Jordgubbsglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
                     <img src="image/daimglass.jpg" alt="Daimglass">
                     <h4>Daimglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/citronsorbet.jpg" alt="Citronsorbet">
-                    <h4>Citronsorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/mangosorbet.jpg" alt="Mangosorbet">
-                    <h4>Mangosorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/hallonsorbet.jpg" alt="Hallonsorbet">
-                    <h4>Hallonsorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/elderberryglass.jpg" alt="Flädersorbet">
-                    <h4>Flädersorbet</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -158,25 +121,6 @@
                     <img src="image/peanutglass.jpg" alt="Choklad och jordnötssmörsglass">
                     <h4>Choklad och jordnötssmörsglass</h4>
                 </a>
-            </div>
-             <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/vattenmelon.jpg" alt="Vattenmelon sorbet">
-                    <h4>Vattenmelon sorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/passion.jpg" alt="Passion sorbet">
-                    <h4>Passion sorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kiwi.jpg" alt="Kiwi sorbet">
-                    <h4>Kiwi sorbet</h4>
-                </a>
-            </div>
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
@@ -210,26 +154,8 @@
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
-                    <img src="image/matcha.jpg" alt="Matchaglass">
-                    <h4>Matchaglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/dumle.jpg" alt="Dumleglass">
-                    <h4>Dumleglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/lime.jpg" alt="Limesorbet">
-                    <h4>Limesorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/blueberry.jpg" alt="Blåbärsglass">
-                    <h4>Blåbärsglass</h4>
+                    <img src="image/kanelbulle.jpg" alt="Kanelbulleglass">
+                    <h4>Kanelbulleglass</h4>
                 </a>
             </div>
         </section>
