--- a/protein.html
+++ b/protein.html
@@ -9,7 +9,9 @@
 
 <body class="recept">
   <header>
+    <a href="index.html">
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
+    </a>
     <nav>
       <a href="index.html">Start</a>
       <a href="recept.html" class="active">Recept</a>
